--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -5,6 +5,15 @@ on:
   pull_request:
   
 jobs:
+  tfsec:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: tfsec
+        uses: aquasecurity/tfsec-pr-commenter-action@v1.2.0
+        with:
+          INPUT_GITHUB_TOKEN: ${{ secrets.APPROVERBOT_SECRET }}
   Checkov:
     runs-on: ubuntu-latest
     steps:
