--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -7,13 +7,21 @@ on:
 jobs:
   Checkov:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so follow-up steps can access it
       - name: Checkout
         uses: actions/checkout@v3
       - name: tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          soft_fail: true
+      - name: tfsec commenter
         uses: aquasecurity/tfsec-pr-commenter-action@v1.2.0
         with:
+          INPUT_GITHUB_TOKEN: ${{ secrets.APPROVERBOT_SECRET }}
           github_token: ${{ secrets.APPROVERBOT_SECRET }}
 
       - name: Checkov GitHub Action
