--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
   
 jobs:
-  Checkov:
+  tfsec:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -23,6 +23,13 @@ jobs:
         with:
           INPUT_GITHUB_TOKEN: ${{ secrets.APPROVERBOT_SECRET }}
           github_token: ${{ secrets.APPROVERBOT_SECRET }}
+  Checkov:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so follow-up steps can access it
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Checkov GitHub Action
         uses: bridgecrewio/checkov-action@v12
